<resources>
    <string name="app_name">OSRS</string>
    <string name="contacting_info">If you have any inquiries or questions please send them to the following
    </string>
    <string name="our_email">E-mail :OSRS@gmail.com></string>
    <string name="mobile_number">Mobile Number: 0796538817</string>


    <string name="products">Products</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="car_brand">Car Brand</string>
    <string name="description">description</string>
    <string name="products_image">products image</string>
    <string name="sign_in_facebook">Sign In With Facebook</string>
    <string name="facebook_app_id">371672466998061</string>
    <string name="fb_login_protocol_scheme">fb371672466998061</string>
    <string name="todo">TODO</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="product_name_in_english">Product Name In English</string>
    <string name="product_name_in_arabic">Product Name In Arabic</string>
    <string name="car_price">Car Price</string>
    <string name="product_description">Product Description</string>


    <string name="car_prompt">Choose A Brand</string>


    <string name="model_prompt">Choose A Model</string>


    <string name="engine_prompt">Type of Engine</string>
    <string-array name="types_of_engine">
        <item>Type of Engine</item>
        <item>1 Cylinder</item>
        <item>2 Cylinders</item>
        <item>3 Cylinders</item>
        <item>4 Cylinders</item>
        <item>5 Cylinders</item>
        <item>6 Cylinders</item>
        <item>7 Cylinders</item>
        <item>8 Cylinders</item>
        <item>9 Cylinders</item>
        <item>10 Cylinders</item>
        <item>12 Cylinders</item>
        <item>14 Cylinders</item>
        <item>16 Cylinders</item>
    </string-array>

    <string name="transmission_prompt">Type of Transmission</string>
    <string name="external_color">External Color</string>
    <string name="internal_color">Internal Color</string>
    <string name="mileage">Mileage</string>
    <string name="year_of_make">Year Of Make :</string>
    <string name="add_product">Add Product</string>
    <string name="add">Add</string>
    <string name="addMainImage">Add Main Image</string>
    <string name="addSubImage">Add Sub Image</string>
    <string name="my_requests">My Requests</string>
    <string name="vendor_requests">Recieved Requests</string>
    <string name="my_products">My Products</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="comma">,</string>
    <string name="car_model">Car Model</string>
    <string name="offer_status">Offer Status</string>
    <string name="or_you_can_login_with">Or you can login with :</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number1">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_type">User Type</string>
    <string name="email">Email</string>
    <string name="product_type">Product Type</string>


    <string-array name="productTypes">
        <item>Select</item>
        <item>Sport</item>
        <item>Classic</item>
        <item>Crossover</item>
        <item>Hatchback</item>
        <item>Convertible</item>
    </string-array>
    <string name="choose_a_profile_picture">Choose A Profile Picture</string>
    <string name="add_main_product_picture">Add Main Product Picture</string>
    <string name="add_profile_picture">Add Profile Picture</string>





    <string-array name="types_of_transmissions">
        <item>Type of Transmission</item>
        <item>Automatic Transmission</item>
        <item>Manual Transmission</item>
        <item>Semi-automatic Transmission</item>
    </string-array>


    <string-array name="type_of_brand">
        <item>Choose A Brand</item>
    </string-array>

    <string-array name="type_of_model">
        <item>Choose A Model</item>
    </string-array>

    <string-array name="user_types">
        <item>Customer</item>
        <item>Vendor</item>
    </string-array>

</resources>
