<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

        <ImageView
                android:id="@+id/mainCarImgView"
                android:layout_margin="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:contentDescription="@string/products_image"/>

    <!-- Start Vertical Linear Layout for the two linear layouts inside it -->
    <LinearLayout
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <!-- Start Horizontal Linear Layout for the car brand and car model -->
        <LinearLayout android:layout_width="wrap_content"
                      android:orientation="horizontal"
                      android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/carBrandTv"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/car_brand"
                    android:textStyle="bold"
                    android:layout_marginStart="0dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <TextView android:layout_width="wrap_content"
                      android:text="@string/comma"
                      android:layout_marginStart="6dp"
                      android:textSize="20sp"
                      android:textStyle="bold"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/car_model"
                      android:id="@+id/carModelTv"
                      android:layout_marginStart="6dp"
                      android:textSize="20sp"
                      android:textStyle="bold"/>
        </LinearLayout>
        <!-- End Horizontal Linear Layout for the car brand and car model -->

        <!-- Start Horizontal Linear Layout for mileage and trans -->
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="5dp"
                      android:orientation="horizontal">

            <TextView android:layout_width="wrap_content"
                      android:text="@string/mileage"
                      android:id="@+id/carMileageTv"
                      android:layout_marginStart="3dp"
                      android:textSize="15sp"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:text="@string/comma"
                      android:layout_marginStart="6dp"
                      android:textSize="15sp"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/transmission_prompt"
                      android:id="@+id/transmissionTv"
                      android:layout_marginStart="6dp"
                      android:textSize="15sp"/>

        </LinearLayout>
        <!-- End Horizontal Linear Layout for mileage and trans -->

        <TextView android:layout_width="wrap_content"
                  android:text="@string/car_price"
                  android:layout_marginTop="10dp"
                  android:id="@+id/carPriceTv"
                  android:layout_marginStart="5dp"
                  android:textSize="15sp"
                  android:layout_height="wrap_content"/>

    </LinearLayout>
    <!-- End Vertical Linear Layout for the two linear layouts inside it -->

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="25dp"
              android:textSize="15sp"
              android:layout_marginStart="5dp"
              android:id="@+id/offerStatusTv"
              android:text="@string/offer_status"/>
</LinearLayout>
