<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            android:background="@android:color/background_light"
            tools:ignore="ScrollViewCount">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activities.AddProductActivity"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"

    >


        <android.support.v7.widget.Toolbar xmlns:tools="http://schemas.android.com/tools"
                                           android:layout_height="wrap_content"
                                           xmlns:android="http://schemas.android.com/apk/res/android"
                                           android:layout_width="match_parent"
                                           tools:targetApi="lollipop"
                                           android:backgroundTint="@android:color/holo_red_light"
                                           android:background="@android:color/holo_red_light"
                                           android:id="@+id/too"
        />


        <TextView
                android:text="@string/add_main_product_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
        />
        <ImageView android:layout_width="100dp"
                   android:src="@drawable/add_photo"
                   android:id="@+id/mainProductPhotoIMG"
                   android:layout_height="100dp"
                   android:layout_marginTop="15dp"
                   android:layout_gravity="center"
                   android:contentDescription="@string/todo"/>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="center"
                      android:layout_gravity="center"
                      android:layout_marginTop="30dp"
        >



            <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
            >
                <EditText
                        android:id="@+id/carBrandEt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/car_prompt"
                        android:autofillHints="yes"
                        tools:ignore="UnusedAttribute"
                        android:inputType="textShortMessage"/>
            </android.support.design.widget.TextInputLayout>

            <!--<Spinner-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/carBrandSpinner"-->
            <!--android:layout_marginTop="20px"-->
            <!--android:prompt="@string/car_prompt"-->
            <!--android:entries="@array/type_of_brand"-->

            <!--/>-->


            <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
            >
                <EditText
                        android:id="@+id/carModelEt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/model_prompt"
                        android:autofillHints="yes"
                        tools:ignore="UnusedAttribute"
                        android:inputType="textShortMessage"/>
            </android.support.design.widget.TextInputLayout>

            <!--<Spinner-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/carModelSpinner"-->
            <!--android:layout_marginTop="40px"-->
            <!--android:prompt="@string/model_prompt"-->
            <!--android:entries="@array/type_of_model"-->

            <!--/>-->

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
        >
            <EditText
                    android:id="@+id/yearOfMakeEt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/year_of_make"
                    android:autofillHints="no"
                    tools:ignore="UnusedAttribute"
                    android:inputType="date"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_width="200dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
        >
            <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/productTypeSp"
                    android:prompt="@string/product_type"
                    android:entries="@array/productTypes"
                    android:layout_marginTop="10dp"
            />

            <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/engineCylindersSpinner"
                    android:prompt="@string/sign_in"
                    android:entries="@array/types_of_engine"

            />

            <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/transmissionSpinner"
                    android:prompt="@string/transmission_prompt"
                    android:entries="@array/types_of_transmissions"
                    android:layout_marginTop="15dp"
            />
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
        >
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/carPrice"
                    android:hint="@string/car_price"
                    tools:ignore="Autofill"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
        >
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/carMileage"
                    android:hint="@string/mileage"
                    tools:ignore="Autofill"
            />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"

        >
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/extColor"
                    android:layout_weight="0.5"
                    android:hint="@string/external_color"
                    tools:ignore="Autofill"
            />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"

        >
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/intColor"
                    android:layout_weight="0.5"
                    android:hint="@string/internal_color"
                    tools:ignore="Autofill"
            />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
        >
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textLongMessage"
                    android:ems="10"
                    android:id="@+id/productDescriptionEt"
                    android:hint="@string/product_description"
                    tools:ignore="Autofill"
            />
        </android.support.design.widget.TextInputLayout>


        <Button android:text="@string/addSubImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addProductSubImageBtn"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@android:color/holo_red_light"
                android:textColor="@android:color/background_light"/>


        <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:id="@+id/gridLinear"
                android:layout_marginTop="30dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp">

            <GridLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:columnCount="5"
                        android:rowCount="1"
                        android:orientation="horizontal"
                        android:scrollbars="horizontal"
            >

                <ImageView
                        android:id="@+id/addProductSubImage1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/todo"
                        android:layout_marginStart="5dp"/>

                <ImageView
                        android:id="@+id/addProductSubImage2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/todo"
                        android:layout_marginStart="5dp"
                />

                <ImageView
                        android:id="@+id/addProductSubImage3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/todo"
                        android:layout_marginStart="5dp"
                />

                <ImageView
                        android:id="@+id/addProductSubImage4"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/todo"
                        android:layout_marginStart="5dp"/>

                <ImageView
                        android:id="@+id/addProductSubImage5"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/todo"
                        android:layout_marginStart="5dp"/>


            </GridLayout>
        </HorizontalScrollView>




        <Button
                android:text="@string/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addProductBtn"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@android:color/holo_red_light"
                android:textColor="@android:color/background_light"/>
    </LinearLayout>
</ScrollView>

